--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "svh is a simple (file) server for html-javascript web client app development",
   "main": "./lib/core.js",
   "scripts": {
-    "test": "echo \"Not Ready Yet :)\" && exit 1"
+    "test": "echo \"ASAP! :)\" && exit 1"
   },
   "dependencies":{
     "commander":"2.0.x",
