--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
         "commander": "2.0.x",
         "express": "3.0.x",
         "watch": "0.8.x",
-        "chalk": "0.2.x"
+        "chalk": "0.2.x",
+        "cheerio":"0.12.x",
+        "concat-stream":"1.0.x"
     },
     "repository": {
         "type": "git",
