--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "svh",
   "version": "0.0.7-beta",
-  "author": "Equan Pr. <eq@junwatu.com> (http://www.junwatu.com)",
+  "author": "Equan Pr. <byte@equan.me> (http://equan.me)",
   "description": "Simple (file) server for html-javascript web client app development",
   "keywords": [
     "auto",
