--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     "commander": "2.0.x",
     "concat-stream": "1.0.x",
     "express": "3.0.x",
-    "request": "^2.58.0",
+    "request": "~2.58.0",
     "watch": "0.8.x"
   },
   "devDependencies": {
     "mocha": "1.13.x",
     "supertest": "0.8.x",
-    "uglify-js": "^2.4.23"  
+    "uglify-js": "^2.4.23"
   },
   "repository": {
     "type": "git",
