--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "devDependencies": {
     "mocha": "1.13.x",
     "supertest": "0.8.x",
-    "uglify-js": "^2.4.23"
+    "uglify-js": "~2.4.23"
   },
   "repository": {
     "type": "git",
