--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "concat-stream": "1.0.x",
     "express": "3.0.x",
     "request": "~2.58.0",
+    "serve-favicon": "^2.3.0",
     "watch": "0.8.x"
   },
   "devDependencies": {
