--- a/package.json
+++ b/package.json
@@ -1,47 +1,34 @@
 {
   "name": "svh",
-  "version": "0.0.7",
+  "version": "0.1.0",
   "author": "Equan Pr. <equan.p@gmail.com> (http://junwatu.github.io)",
-  "description": "Simple (file) server for front-end app development",
-  "keywords": [
-    "auto",
-    "development",
-    "monitor",
-    "nodemon",
-    "process",
-    "reload",
-    "restart",
-    "server",
-    "static",
-    "watch"
-  ],
+  "description": "Simple file server",
   "homepage": "https://github.com/junwatu/svh",
   "bugs": "https://github.com/junwatu/svh/issues",
   "main": "./lib/core.js",
   "scripts": {
-    "build": "npm run buildjs",
-    "buildjs": "uglifyjs ./lib/client/svh.js -o ./lib/client/svh.min.js",
+    "build": "uglifyjs ./lib/client/svh.js -o ./lib/client/svh.min.js",
     "test": "mocha"
   },
   "dependencies": {
-    "async": "~0.2.9",
-    "chalk": "0.2.x",
-    "cheerio": "0.12.x",
-    "commander": "2.0.x",
-    "concat-stream": "1.0.x",
-    "express": "3.0.x",
+    "async": "2.0.x",
+    "chalk": "1.1.x",
+    "cheerio": "0.20.x",
+    "commander": "2.9.x",
+    "concat-stream": "1.5.x",
+    "express": "3.21.x",
     "random-words": "0.0.1",
-    "request": "~2.58.0",
-    "serve-favicon": "^2.3.0",
-    "watch": "0.8.x"
+    "request": "2.x.x",
+    "serve-favicon": "2.3.x",
+    "watch": "0.19.x"
   },
   "engines":{
     "node": ">=6.0.0"
   },
   "devDependencies": {
-    "mocha": "1.13.x",
-    "supertest": "0.8.x",
-    "uglify-js": "~2.4.23"
+    "mocha": "3.0.x",
+    "supertest": "2.0.x",
+    "uglify-js": "2.7.x"
   },
   "repository": {
     "type": "git",
@@ -50,5 +37,21 @@
   "bin": {
     "svh": "./bin/svh"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "keywords": [
+    "file server",
+    "auto",
+    "ngrok",
+    "tunelling",
+    "development",
+    "monitor",
+    "nodemon",
+    "process",
+    "reload",
+    "restart",
+    "server",
+    "static",
+    "watch",
+    "simple"
+  ]
 }
